--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,8 +11,8 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        python-version: ["3.10"]
-        os: ["ubuntu-20.04", "ubuntu-latest"]
+        python-version: ["3.10", "3.11"]
+        os: ["ubuntu-22.04", "ubuntu-latest"]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v4
@@ -29,7 +29,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: ["ubuntu-20.04", "ubuntu-latest"]
+        os: ["ubuntu-22.04", "ubuntu-latest"]
         component: ["client", "server"]
     steps:
       - uses: actions/checkout@v4
