--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,8 +5,8 @@ on:
     branches: [ master, staging ]
 
 jobs:
-  Software_Test:
-    name: Software Tests
+  Python_Tests:
+    name: Python Tests
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: true
@@ -23,7 +23,22 @@ jobs:
           python -m pip install poetry bandit
           python -m poetry install
           python -m poetry run bandit -ll -c .bandit.yml streamdl_proto_srv.py
-  Docker_Test:
+  Go_Tests:
+    name: Go Tests
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: true
+      matrix:
+        go-version: ["1.20", "1.21.1"]
+        os: ["ubuntu-22.04", "ubuntu-latest"]
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v4
+        with:
+          go-version: ${{ matrix.go-version }}
+      - run: |
+          go test -v -count=1 ./...
+  Docker_Tests:
     name: Docker Build Test
     runs-on: ${{ matrix.os }}
     strategy:
