docs: update wording around default log level

--- a/docker-compose.yml.example
+++ b/docker-compose.yml.example
@@ -16,7 +16,7 @@ services:
       - ./config.yml:/app/config.yml # config file
     environment:
       - TICK_TIME=10 # time to repeat, in seconds
-      - LOG_LEVEL=INFO # log level
+      - LOG_LEVEL=INFO # log level, defaults to DEBUG
       - STREAMDL_GRPC_ADDR=server
       - STREAMDL_GRPC_PORT=50051
     depends_on:
