--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,7 +48,7 @@ jobs:
           cache-to: type=gha,mode=max
           push: false
       - run: |
-          docker run local_streamdl_server:latest -e STREAMDL_GRPC_PORT=50051 -p 50051:50051 -d
+          docker run local_streamdl_server:latest -e STREAMDL_GRPC_PORT='50051' -p 50051:50051 -d
           go test -v -count=1 ./...
   Docker_Tests:
     name: Docker Build Test
