--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,19 +36,25 @@ jobs:
       - uses: actions/setup-go@v4
         with:
           go-version: ${{ matrix.go-version }}
-      - uses: docker/setup-buildx-action@v2
-      - name: Build Local Server
-        uses: docker/build-push-action@v4
+      - uses: actions/setup-python@4
         with:
-          context: .
-          file: "Dockerfile.server"
-          tags: local_streamdl_server:latest
-          load: true
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-          push: false
+          python-version: "3.10"
+      # - uses: docker/setup-buildx-action@v2
+      # - name: Build Local Server
+      #   uses: docker/build-push-action@v4
+      #   with:
+      #     context: .
+      #     file: "Dockerfile.server"
+      #     tags: local_streamdl_server:latest
+      #     load: true
+      #     cache-from: type=gha
+      #     cache-to: type=gha,mode=max
+      #     push: false
       - run: |
-          docker run local_streamdl_server:latest -e STREAMDL_GRPC_PORT='50051' -p 50051:50051 -d
+          export STREAMDL_GRPC_PORT='50051'
+          export STREAMDL_GRPC_ADDR='localhost'
+          ./entrypoint-server.sh &
+          # docker run local_streamdl_server:latest -e STREAMDL_GRPC_PORT='50051' -p 50051:50051 -d
           go test -v -count=1 ./...
   Docker_Tests:
     name: Docker Build Test
