--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,7 +36,7 @@ jobs:
       - uses: actions/setup-go@v4
         with:
           go-version: ${{ matrix.go-version }}
-      - uses: actions/setup-python@4
+      - uses: actions/setup-python@v4
         with:
           python-version: "3.10"
       # - uses: docker/setup-buildx-action@v2
