test: manually govern killing the server

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -54,8 +54,10 @@ jobs:
           export STREAMDL_GRPC_PORT='50051'
           export STREAMDL_GRPC_ADDR='localhost'
           ./entrypoint-server.sh &
+          pid=$!
           # docker run local_streamdl_server:latest -e STREAMDL_GRPC_PORT='50051' -p 50051:50051 -d
           go test -v -count=1 ./...
+          kill -9 $pid
   Docker_Tests:
     name: Docker Build Test
     runs-on: ${{ matrix.os }}
