fix: test: install deps

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -53,6 +53,8 @@ jobs:
       - run: |
           export STREAMDL_GRPC_PORT='50051'
           export STREAMDL_GRPC_ADDR='localhost'
+          python -m pip install poetry bandit
+          python -m poetry install
           ./entrypoint_server.sh &
           pid=$!
           # docker run local_streamdl_server:latest -e STREAMDL_GRPC_PORT='50051' -p 50051:50051 -d
