--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ grpcio = "^1.62.1"
 protobuf = "^4.25.3"
 streamlink = "^6.7.2"
 wheel = "^0.43.0"
+yt-dlp = "^2024.3.10"
 
 [tool.poetry.dev-dependencies]
 pytest = "*"
