--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,15 +11,16 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        python-version: ["3.10", "3.11"]
-        go-version: ["1.20", "1.21.1"]
+        python-version: ["3.10", "3.13"]
+        go-version: ["1.20", "1.22.1"]
         os: ["ubuntu-22.04", "ubuntu-latest"]
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
           architecture: "x64"
+          allow-prereleases: true
       - uses: actions/setup-go@v4
         with:
           go-version: ${{ matrix.go-version }}
