--- a/.github/workflows/deploy_master.yml
+++ b/.github/workflows/deploy_master.yml
@@ -2,7 +2,7 @@ name: "Dockerhub Build - Master"
 
 on:
   push:
-    branches: [ master ]
+    branches: [master]
 
 jobs:
   Changelog_Release:
@@ -11,10 +11,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      
+
       - uses: actions/setup-node@v4
         with:
-          node-version: '16'
+          node-version: "16"
           check-latest: true
 
       - name: Install Changelog NPM Package
@@ -25,14 +25,14 @@ jobs:
         id: changelog
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          git-message: 'chore(release)🤖: {version} [skip ci]'
+          git-message: "chore(release)🤖: {version} [skip ci]"
           output-file: "CHANGELOG.md"
-          tag-prefix: 'v'
-          fallback-version: '2.1.1'
+          tag-prefix: "v"
+          fallback-version: "2.1.1"
           release-count: 0 # preserve all versions in changelog
           version-file: pyproject.toml
           version-path: tool.poetry.version
-          config-file-path: './.changelog.config.js'
+          config-file-path: "./.changelog.config.js"
           skip-on-empty: false # otherwise we don't publish fixes
 
       - name: Create Release
@@ -59,7 +59,7 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: 'Get Tag'
+      - name: "Get Tag"
         id: tag
         uses: "WyriHaximus/github-action-get-previous-tag@v1"
         with:
@@ -99,7 +99,7 @@ jobs:
         with:
           image: dangeroustech/streamdl:${{ matrix.component }}_stable
           args: --severity-threshold=high --file=Dockerfile.${{ matrix.component }}
-      
+
       - name: Upload result to GitHub Code Scanning
         uses: github/codeql-action/upload-sarif@v3
         continue-on-error: true
