--- a/docker-compose.yml.example
+++ b/docker-compose.yml.example
@@ -16,6 +16,6 @@ services:
     volumes:
       - ./downloads/incomplete:/app/dl # in-progress downloads location
       - ./downloads/complete:/app/out # completed downloads location
-      - ./config.yml:/app/config.yml # config file
+      - ./config:/app/config # config folder - using a folder allows host updates without cycling the container
     depends_on:
       - server
