cd: we don't need to build on 2 different host OSes

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,7 +43,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: ["ubuntu-22.04", "ubuntu-latest"]
+        os: ["ubuntu-latest"]
         component: ["client", "server"]
     steps:
       - uses: actions/checkout@v4
