--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -4,10 +4,11 @@ FROM python:3.12.7-slim-bullseye as deps
 ENV VIRTUAL_ENV=/opt/venv
 RUN python3 -m venv $VIRTUAL_ENV
 ENV PATH="$VIRTUAL_ENV/bin:$PATH"
+WORKDIR /app
 COPY . .
-RUN pip install poetry==1.8.2
-RUN poetry export --without-hashes -o requirements.txt
-RUN pip install -r requirements.txt
+RUN pip install --no-cache-dir poetry==1.8.2 && \
+    poetry export --without-hashes -o requirements.txt && \
+    pip install --no-cache-dir -r requirements.txt
 
 # Python Protobuf Server
 FROM python:3.12.7-slim-bullseye as server
