--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: "Pull Request Tests"
+name: Pull Request Tests
 
 on:
   pull_request:
@@ -11,15 +11,15 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        python-version: ["3.10", "3.12"]
-        go-version: ["1.20", "1.22.1"]
-        os: ["ubuntu-22.04", "ubuntu-latest"]
+        python-version: ["3.13", "3.14"]
+        go-version: [1.20, 1.22.1]
+        os: [ubuntu-22.04, ubuntu-latest]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-          architecture: "x64"
+          architecture: x64
           allow-prereleases: true
       - uses: actions/setup-go@v5
         with:
@@ -36,14 +36,14 @@ jobs:
           go test -v -count=1 ./...
         env:
           STREAMDL_GRPC_PORT: "50051"
-          STREAMDL_GRPC_ADDR: "localhost"
+          STREAMDL_GRPC_ADDR: localhost
   Docker_Tests:
     name: Docker Build Test
     runs-on: ubuntu-latest
     strategy:
       fail-fast: true
       matrix:
-        component: ["client", "server"]
+        component: [client, server]
     steps:
       - uses: actions/checkout@v4
       - name: Login to DockerHub
