sec: ensure top-level permissions are not set to write-all

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,6 +4,9 @@ on:
   pull_request:
     branches: [master, staging]
 
+permissions:
+  contents: read
+
 jobs:
   Software_Tests:
     name: Software Tests
