chore: fix linter errors

--- a/.github/workflows/deploy_master.yml
+++ b/.github/workflows/deploy_master.yml
@@ -1,13 +1,16 @@
-name: "Dockerhub Build - Master"
+name: Dockerhub Build - Master
 
 on:
   push:
     branches: [master]
 
+permissions:
+  contents: read
+
 jobs:
   Changelog_Release:
     name: Changelog Release
-    runs-on: "ubuntu-latest"
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -26,13 +29,13 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           git-message: "chore(release)🤖: {version} [skip ci]"
-          output-file: "CHANGELOG.md"
-          tag-prefix: "v"
-          fallback-version: "2.1.1"
+          output-file: CHANGELOG.md
+          tag-prefix: v
+          fallback-version: 2.1.1
           release-count: 0 # preserve all versions in changelog
           version-file: pyproject.toml
           version-path: tool.poetry.version
-          config-file-path: "./.changelog.config.js"
+          config-file-path: ./.changelog.config.js
           skip-on-empty: false # otherwise we don't publish fixes
 
       - name: Create Release
@@ -52,16 +55,16 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        component: ["client", "server"]
+        component: [client, server]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: "Get Tag"
+      - name: Get Tag
         id: tag
-        uses: "WyriHaximus/github-action-get-previous-tag@v1"
+        uses: WyriHaximus/github-action-get-previous-tag@v1
         with:
           fallback: 1.0.0
 
