refactor: move to uv for deps

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,27 +19,27 @@ jobs:
         os: [ubuntu-22.04, ubuntu-latest]
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
-          architecture: x64
-          allow-prereleases: true
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
+      - name: Set Up Python ${{ matrix.python-version }}
+        run: uv python install ${{ matrix.python-version }}
       - uses: actions/setup-go@v5
         with:
           go-version: ${{ matrix.go-version }}
-      - name: Install Deps and Run Tests
+      - name: Install Deps
         run: |
-          # Install Python Deps
-          python -m pip install poetry bandit
-          python -m poetry install
-          # Run Python Tests
-          python -m poetry run bandit -ll -c .bandit.yml streamdl_proto_srv.py
-          python -m poetry run python streamdl_proto_srv.py &
-          # Run Go Tests
-          go test -v -count=1 ./...
+          uv sync --all-extras --dev
         env:
           STREAMDL_GRPC_PORT: "50051"
           STREAMDL_GRPC_ADDR: localhost
+      - name: Run Python Tests
+        run: |
+          uv run bandit -ll -c .bandit.yml streamdl_proto_srv.py
+          uv run pytest tests
+      - name: Run Go Tests
+        run: |
+          uv run python streamdl_proto_srv.py &
+          go test -v -count=1 ./...
   Docker_Tests:
     name: Docker Build Test
     runs-on: ubuntu-latest
