--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,13 +29,13 @@ jobs:
       - name: Install Deps
         run: |
           uv sync --all-extras --dev
-        env:
-          STREAMDL_GRPC_PORT: "50051"
-          STREAMDL_GRPC_ADDR: "localhost"
       - name: Run Python Tests
         run: |
           uv run bandit -ll -c .bandit.yml streamdl_proto_srv.py
       - name: Run Go Tests
+        env:
+          STREAMDL_GRPC_PORT: "50051"
+          STREAMDL_GRPC_ADDR: localhost
         run: |
           uv run python streamdl_proto_srv.py &
           go test -v -count=1 ./...
