--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,18 +1,18 @@
 version: 2
 updates:
-- package-ecosystem: pip
-  directory: "/"
-  schedule:
-    interval: daily
-  open-pull-requests-limit: 10
-  target-branch: staging
-  reviewers:
-  - biodrone
-  assignees:
-  - biodrone
-  labels:
-  - dependencies
-  commit-message:
-    prefix: "chore 🤖"
-    prefix-development: "chore 🤖"
-    include: "scope"
+  - package-ecosystem: pip
+    directory: /
+    schedule:
+      interval: daily
+    open-pull-requests-limit: 10
+    target-branch: staging
+    reviewers:
+      - biodrone
+    assignees:
+      - biodrone
+    labels:
+      - dependencies
+    commit-message:
+      prefix: chore 🤖
+      prefix-development: chore 🤖
+      include: scope
