--- a/.github/workflows/deploy_master.yml
+++ b/.github/workflows/deploy_master.yml
@@ -34,7 +34,7 @@ jobs:
           fallback-version: 2.1.1
           release-count: 0 # preserve all versions in changelog
           version-file: pyproject.toml
-          version-path: tool.poetry.version
+          version-path: project.version
           config-file-path: ./.changelog.config.js
           skip-on-empty: false # otherwise we don't publish fixes
 
