--- a/.github/workflows/deploy_master.yml
+++ b/.github/workflows/deploy_master.yml
@@ -102,7 +102,11 @@ jobs:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
           image: dangeroustech/streamdl:${{ matrix.component }}_stable
-          args: --severity-threshold=high --file=Dockerfile.${{ matrix.component }}
+          args: >-
+            --severity-threshold=medium
+            --file=Dockerfile.${{ matrix.component }}
+            --exclude-base-image-vulns
+            --policy-path=.snyk
 
       - name: Upload result to GitHub Code Scanning
         uses: github/codeql-action/upload-sarif@v3
