--- a/Dockerfile.client
+++ b/Dockerfile.client
@@ -1,14 +1,14 @@
 FROM mwader/static-ffmpeg:4.4.1 AS ffmpeg
 
 # Go Binary Builder
-FROM golang:1.21.4-alpine3.17 AS go-build
+FROM golang:1.24.1-alpine AS go-build
 WORKDIR /app
 COPY . .
 RUN go get -v && \
     go build -o streamdl
 
 # Golang Protobuf Client and Logic
-FROM golang:1.21.4-alpine3.17 AS client
+FROM golang:1.24.1-alpine AS client
 WORKDIR /app
 RUN mkdir -p /app/dl /app/out
 # Copy FFMPEG Binaries
