--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
       fail-fast: true
       matrix:
         python-version: ["3.12", "3.13"]
-        go-version: [1.22, 1.23]
+        go-version: [1.24]
         os: [ubuntu-24.04, ubuntu-latest]
     steps:
       - uses: actions/checkout@v4
