--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,9 @@ requires-python = "<4.0,>=3.10"
 dependencies = [
   "grpcio<2.0.0,>=1.62.1",
   "protobuf<6.0.0,>=5.26.0",
-  "streamlink<7.0.0,>=6.7.2",
+  "streamlink>=7.1.3",
   "wheel<1.0.0,>=0.43.0",
-  "yt-dlp<2025.0.0,>=2024.3.10",
+  "yt-dlp>=2025.2.19",
 ]
 name = "StreamDL"
 version = "3.2.18"
