--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -7,14 +7,23 @@ RUN which uv
 
 # Python Protobuf Server
 FROM python:3.13-slim-bookworm AS server
+
+# Install gosu for running as non-root
+RUN apt-get update && apt-get install -y gosu && rm -rf /var/lib/apt/lists/*
+
 WORKDIR /app
+
 # Copy in app files
 COPY --from=deps /app/pyproject.toml /app/pyproject.toml
 COPY --from=deps /app/README.md /app/README.md
 COPY --from=deps /app/streamdl_proto_srv.py /app/streamdl_proto_srv.py
 COPY --from=deps /app/stream_pb2.py /app/stream_pb2.py
 COPY --from=deps /app/stream_pb2_grpc.py /app/stream_pb2_grpc.py
-COPY --from=deps /app/entrypoint_server.sh /app/entrypoint_server.sh
-RUN pip install --no-cache-dir uv==0.4.28 && \
-    uv sync
+COPY entrypoint_server.sh /app/entrypoint_server.sh
+COPY streamdl_server_entrypoint.sh /app/streamdl_server_entrypoint.sh
+
+RUN pip install --no-cache-dir uv==0.4.28 && uv sync && \
+    chmod +x /app/entrypoint_server.sh /app/streamdl_server_entrypoint.sh
+
+# HEALTHCHECK --interval=60s --timeout=15s --start-period=5s --retries=3 CMD curl --fail http://streamdl-server:8080/health || exit 1
 ENTRYPOINT ["/bin/sh", "/app/entrypoint_server.sh"]
