--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -2,44 +2,45 @@
 # To learn more about the format of this file, see https://docs.trunk.io/reference/trunk-yaml
 version: 0.1
 cli:
-  version: 1.21.0
+  version: 1.22.11
 # Trunk provides extensibility via plugins. (https://docs.trunk.io/plugins)
 plugins:
   sources:
     - id: trunk
-      ref: v1.4.5
+      ref: v1.6.7
       uri: https://github.com/trunk-io/plugins
 # Many linters and tools depend on runtimes - configure them here. (https://docs.trunk.io/runtimes)
 runtimes:
   enabled:
     - go@1.21.0
-    - node@18.12.1
+    - node@18.20.5
     - python@3.10.8
-    - rust@1.71.1
+    - rust@1.82.0
 # This is the section where you manage your linters. (https://docs.trunk.io/check/configuration)
 lint:
   enabled:
-    - actionlint@1.6.27
-    - bandit@1.7.8
-    - black@24.3.0
-    - checkov@3.2.46
+    - snyk@1.1295.0
+    - actionlint@1.7.7
+    - bandit@1.8.3
+    - black@25.1.0
+    - checkov@3.2.386
     - git-diff-check
     - gofmt@1.20.4
-    - golangci-lint@1.57.1
-    - hadolint@2.12.0
-    - isort@5.13.2
-    - markdownlint@0.39.0
+    - golangci-lint@1.64.7
+    - hadolint@2.12.1-beta
+    - isort@6.0.1
+    - markdownlint@0.44.0
     - nixpkgs-fmt@1.3.0
-    - osv-scanner@1.7.0
-    - prettier@3.2.5
-    - ruff@0.3.4
+    - osv-scanner@1.9.2
+    - prettier@3.5.3
+    - ruff@0.10.0
     - shellcheck@0.10.0
     - shfmt@3.6.0
-    - taplo@0.8.1
+    - taplo@0.9.3
     - terrascan@1.19.1
-    - trivy@0.50.0
-    - trufflehog@3.71.0
-    - yamllint@1.35.1
+    - trivy@0.60.0
+    - trufflehog@3.88.17
+    - yamllint@1.36.0
 actions:
   disabled:
     - trunk-announce
