--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -8,8 +8,8 @@ RUN which uv
 # Python Protobuf Server
 FROM python:3.13-slim-bookworm AS server
 
-# Install gosu for running as non-root
-RUN apt-get update && apt-get install -y --no-install-recommends gosu==1.17-3+b4 && rm -rf /var/lib/apt/lists/*
+# Install gosu and curl for running as non-root and health checks
+RUN apt-get update && apt-get install -y --no-install-recommends gosu=1.14-1+b10 curl=7.88.1-10+deb12u12 && rm -rf /var/lib/apt/lists/*
 
 # Create a default non-root user
 RUN groupadd -g 1000 streamdl && \
@@ -33,5 +33,11 @@ COPY streamdl_server_entrypoint.sh /app/streamdl_server_entrypoint.sh
 RUN pip install --no-cache-dir uv==0.4.28 && uv sync && \
     chmod +x /app/entrypoint_server.sh /app/streamdl_server_entrypoint.sh
 
-# HEALTHCHECK --interval=60s --timeout=15s --start-period=5s --retries=3 CMD curl --fail http://streamdl-server:8080/health || exit 1
+# Add health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+  CMD curl --fail --max-time 5 http://localhost:8080/health || exit 1
+
+# Switch to non-root user (entrypoint script handles final user switching)
+USER streamdl
+
 ENTRYPOINT ["/bin/sh", "/app/entrypoint_server.sh"]
