chore: add category parameter for Snyk SARIF file in deploy workflows

--- a/.github/workflows/deploy_staging.yml
+++ b/.github/workflows/deploy_staging.yml
@@ -64,6 +64,7 @@ jobs:
         continue-on-error: true
         with:
           sarif_file: snyk.sarif
+          category: snyk-staging-${{ matrix.component }}
 
       - name: Dockerhub Push Staging
         id: dockerhub_staging_push
