--- a/.github/workflows/deploy_master.yml
+++ b/.github/workflows/deploy_master.yml
@@ -115,3 +115,4 @@ jobs:
         continue-on-error: true
         with:
           sarif_file: snyk.sarif
+          category: snyk-master-${{ matrix.component }}
