chore: update category parameter for Snyk SARIF file in deploy workflows to remove redundant prefixes

--- a/.github/workflows/deploy_master.yml
+++ b/.github/workflows/deploy_master.yml
@@ -115,4 +115,4 @@ jobs:
         continue-on-error: true
         with:
           sarif_file: snyk.sarif
-          category: snyk-master-${{ matrix.component }}-push
+          category: ${{ matrix.component }}-master
