chore: add --sarif option to Snyk scan parameters in deploy workflows

--- a/.github/workflows/deploy_master.yml
+++ b/.github/workflows/deploy_master.yml
@@ -107,6 +107,7 @@ jobs:
             --exclude-base-image-vulns
             --policy-path=.snyk
             --app-vulns
+            --sarif
 
       - name: Upload result to GitHub Code Scanning
         uses: github/codeql-action/upload-sarif@v3
