--- a/.github/workflows/deploy_staging.yml
+++ b/.github/workflows/deploy_staging.yml
@@ -57,6 +57,7 @@ jobs:
             --exclude-base-image-vulns
             --policy-path=.snyk
             --app-vulns
+            --sarif
 
       - name: Upload result to GitHub Code Scanning
         id: snyk_results_upload
